testsuite/tests/th/T5971.stderr

T5971.hs:6:6: error:
    • The Name ‘x’ is not in scope.
    • In the untyped splice: $(newName "x" >>= varE)
    Suggested fix:
      If you bound a unique Template Haskell name (NameU)
      perhaps via newName,
      then -ddump-splices might be useful.
